= HEAD

* Allow specifying constants to remove via a block to require, instead of using ObjectSpace (jeremyevans)

* Don't unload constants defined in parents when loading dependencies (jeremyevans)

= 0.9.0 (2014-08-04)

* Initial public release